@@ -11,6 +11,8 @@
 * Remove system metrics that called getAllStackTraces(): com.serotonin.m2m2.rt.maint.WorkItemMonitor.maxStackHeight and com.serotonin.m2m2.rt.maint.WorkItemMonitor.threadCount
 * Dont allow concurrent polling for metrics in ServerMonitoringService and DiskMonitoringService
 * Fix bug where "sessionCookie.persistPeriodSeconds" setting was ignored
+* Add setup page to configure admin password and locale on first login
+* Move timezone env property use to be before Logging initializes so logging uses this timezone
 
 *Version 4.1.3*
 * Fix Docker image to include correct bundle version
